<resources>
    <string name="final_app_name">Store Locator</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoibXNjaGVlcjc1IiwiYSI6ImNrZnlwaWYzYjBzaGEydW83eDhmc2psbGQifQ.PvgywjbS7Idol8VnG4AsAQ</string>
    <string name="purple_map_style" translatable="false">mapbox://styles/mapbox/cj7bww7is2f4i2rnwyxkzpwu7</string>
    <string name="blue_map_style" translatable="false">mapbox://styles/mapbox/cj7bwwv3caf7l2spgukxm8bwv</string>
    <string name="terminal_map_style" translatable="false">mapbox://styles/mapbox/cj62n87yx3mvi2rp93sfp2w9z</string>
    <string name="map_view">Map view</string>
    <string name="failure_to_load_file">Failure to load the local file of locations. Please try reloading the app.</string>
    <string name="mock_location_title">Fake device location</string>
    <string name="select_a_theme">Tap on a theme</string>
    <string name="no_internet_message">Route drawing not possible because there\'s no internet connection!</string>
    <string name="failure_to_retrieve">Failure to retrieve the navigation route!</string>

    <!-- Single card -->
    <string name="hours">Hours</string>
    <string name="phone">Phone</string>
    <string name="distance">mi</string>
    <string name="item_name">Item Name</string>
    <string name="my_current_list">My current List</string>
    <string name="begin_route">Begin Route</string>
    <string name="submit_item">Submit Item</string>
    <string name="clear_list">Clear List</string>
    <string name="remove_item">Remove Item</string>
</resources>
